--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 	<title>3D-JS</title>
 	<!--script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script-->
-	<script type="text/javascript" src="d3.min.js"></script>
+	<script src="d3.min.js"></script>
+	<script src="ajax.js"></script>
+	<script src="jquery-1.11.3.min.js"></script>
 </head>
 <body>
-<p>Kimaiga</p>
+<button class="trigger">Trigger</button>
+<div class="result"></div>
+<div class="log"></div>
+
+<script type="text/javascript">
+	$( document ).ajaxError(function() {
+  $( ".log" ).text( "Triggered ajaxError handler." );
+});
+
+	$( "button.trigger" ).on( "click", function() {
+  $( "div.result" ).load( "ajax/index.html" );
+});
+</script>
+
 </body>
 </html>
